# static-site-infra

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt
.claude/agents/: cdk-drift-detector.md  cost-guard.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup.yml  ci.yml  pr.yml  security.yml  validate-buckets.yml
specter_static_site/: __init__.py  static_site_stack.py
specter_static_site/auth/: cognito_client.py  handler.py  jwt_validator.py  requirements.txt
tests/: test_static_site_stack.py
