[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specter-static-site"
version = "2.4.0"
description = "Reusable CDK construct for static site hosting on AWS"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib~=2.244.0",
    "constructs~=10.5.1",
    "cdk-nag~=2.37.55",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
]
